--- a/Day 3/temp-2-new/my-app/package.json
+++ b/Day 3/temp-2-new/my-app/package.json
@@ -14,14 +14,20 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "lucide-react": "^0.473.0",
     "next": "^14.2.23",
     "next-sanity": "^9.8.38",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "sanity": "^3.70.0",
     "slugify": "^1.6.6",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
